# localhost

./: .gitignore  AUDITME.md  Cargo.toml  LICENSE  README.md  config.toml
.github/workflows/: rust.yml
cgi/: javascript.js  php.php  python.py  ruby.rb
files/: cookie-demo.html  dir.html  test(2).txt  test.txt
files/default_errors/: 400.html  401.html  402.html  404.html  405.html  406.html  407.html  408.html  409.html  410.html  411.html  412.html  413.html  414.html  415.html  416.html  417.html  418.html  421.html  426.html  428.html  429.html  431.html  451.html  500.html  501.html  502.html  503.html  504.html  505.html  506.html  510.html  511.html  error-style.css
src/: lib.rs  main.rs  test
src/cgi/: javascript.js  php.php  ruby.rb
src/client/: handle.rs  requests.rs  responses.rs
src/default_errors/: 400.html  401.html  403.html  404.html  405.html  411.html  413.html  500.html
src/files/: index.html
src/handlers/: delete.rs  mod.rs  sessions.rs  upload.rs
src/log/: logging.rs
src/server/: cgi.rs  handle.rs  methods.rs  mod.rs  requests.rs  responses.rs  routes.rs  sessions.rs  start.rs  state.rs
src/server_config/: config.rs
tests/: chunked_encoding.rs  common.rs  integration_tests.rs  mock.rs  siege_test.txt  test_cgi.rs  test_methods.rs  test_responses.rs  test_route.rs  test_sessions.rs  unit_tests.rs
