[package]
name = "localhost"
version = "0.1.0"
edition = "2021"

[dependencies]
http = "1.0.0"
curl = "0.4.44"
mio = { version = "0.8.10", features = ["net", "os-poll"] }
socket2 = "0.5.5"
chrono = "0.4.31"
reqwest = { version = "0.11", features = ["blocking"] }
rand = { version = "0.8.5", features = [] }
cargo-tarpaulin = "0.27.3"
lazy_static = "1.4.0"

[dev-dependencies]
lazy_static = "1.4"

[profile.release]
opt-level = 0
